--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 :root {
     --popup-enter: 0.25s;
-    --image-enlarge-size: min(50vw, 50vh);
+    --image-enlarge-height: min(min(50vw, 50vh), 50%);
+    --image-enlarge-width: min(--image-enlarge-width, auto);
     --image-size-max: min(50%, 50%);
     --popup-quit: 0.12s;
     --incorrect-clr: red;
@@ -11,6 +12,12 @@
     --channel-width: min(25vw, 200px);
     --channel-show-length: 0.2s;
 
+}
+
+.popup_image {
+    height: var(--image-enlarge-height);
+    width: var(--image-enlarge-width);
+    animation: imageEnlarge var(--popup-enter);
 }
 
 .contactHead {
@@ -54,13 +61,12 @@
 
 }
 
-html,
 body {
     width: 100%;
     height: 100%;
     background-color: rgba(19, 161, 71, 0.387);
     border-radius: 0;
-    margin-top: 20px;
+    padding-top: 20px;
 }
 
 .mainContainer {
@@ -182,38 +188,34 @@ body {
     margin-bottom: 30px;
 }
 
-.popup_image {
-    height: var(--image-enlarge-size);
-    width: var(--image-enlarge-size);
-    animation: imageEnlarge var(--popup-enter);
-}
+
 
 @keyframes imageEnlarge {
     0% {
-        height: min(20vw, 20vh);
-        width: min(20vw, 20vh);
+        width: calc(var(--image-enlarge-width) /5);
+        height: calc(var(--image-enlarge-height) /5);
     }
 
     80% {
-        height: min(52vw, 52vh);
-        width: min(52vw, 52vh);
+        width: calc(var(--image-enlarge-width) * 1.05);
+        height: calc(var(--image-enlarge-height) * 1.05);
     }
 
     100% {
-        height: var(--image-enlarge-size);
-        width: var(--image-enlarge-size);
+        height: var(--image-enlarge-height);
+        width: var(--image-enlarge-width);
     }
 }
 
 @keyframes imageShrink {
     0% {
-        height: var(--image-enlarge-size);
-        width: var(--image-enlarge-size);
+        height: var(--image-enlarge-height);
+        width: var(--image-enlarge-width);
     }
 
     100% {
-        height: min(20vw, 20vh);
-        width: min(20vw, 20vh);
+        width: calc(var(--image-enlarge-width) /5);
+        height: calc(var(--image-enlarge-height) /5);
     }
 }
 
@@ -232,11 +234,13 @@ body {
 }
 
 .buttonHeader {
-    margin-bottom: 20px;
+
     background-color: rgb(13, 142, 37);
     position: fixed;
     /* Set the navbar to fixed position */
     top: 0;
+    left: 0;
+    right: 0;
     /* Position the navbar at the top of the page */
     width: 100%;
 
